--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "element-plus": "^2.3.12",
     "pinia": "^2.1.6",
     "vue": "^3.3.4",
+    "vue-advanced-cropper": "2.8.8",
     "vue-router": "^4.2.4"
   },
   "devDependencies": {
