--- a/package.json
+++ b/package.json
@@ -9,8 +9,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "2.1.0",
     "element-plus": "^2.3.12",
+    "html2canvas": "1.4.1",
     "pinia": "^2.1.6",
+    "print-js": "1.6.0",
+    "unplugin-icons": "0.16.6",
+    "vite-plugin-inspect": "0.7.38",
     "vue": "^3.3.4",
     "vue-advanced-cropper": "2.8.8",
     "vue-router": "^4.2.4"
