--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "2.1.0",
-    "element-plus": "^2.3.12",
+    "element-plus": "^2.11.2",
     "html2canvas": "1.4.1",
     "unplugin-icons": "0.16.6",
     "vite-plugin-inspect": "0.7.38",
@@ -31,7 +31,7 @@
     "typescript": "^5.0.2",
     "unplugin-auto-import": "^0.16.6",
     "unplugin-vue-components": "^0.25.2",
-    "vite": "^4.4.5",
+    "vite": "7.1.5",
     "vue-tsc": "^1.8.5"
   }
 }
