--- a/package.json
+++ b/package.json
@@ -33,5 +33,6 @@
     "unplugin-vue-components": "^0.25.2",
     "vite": "7.1.5",
     "vue-tsc": "^1.8.5"
-  }
+  },
+  "packageManager": "pnpm@10.7.1"
 }
